fix nav spacing and hero rendering

--- a/scss/layout/_main-navigation.scss
+++ b/scss/layout/_main-navigation.scss
@@ -11,8 +11,6 @@
     }
     .main-navigation-list-item{
         position: relative;
-        margin: 0 1rem;
-
         &:hover {
             .main-navigation-link {
                 background-color: #fb9d00;
