--- a/scss/widgets/_button.scss
+++ b/scss/widgets/_button.scss
@@ -7,6 +7,7 @@
     color: white;
     border: 1px solid transparent;
     transition: all ease-in-out 250ms;
+    margin: 0 1rem;
 
     &:hover {
         color: #fb9d00 !important;
